[package]
name = "list-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio-tungstenite="0.23.0"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
hyper = { version = "1", default-features = false, features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio = { version = "1", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }
url = "2"
env_logger = "0.11"
log = "0.4"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false